--- a/meal.css
+++ b/meal.css
@@ -11,7 +11,7 @@
 
 body {
     font-family: Arial, sans-serif;
-    background:url("img/beautiful_beach_waves-wallpaper-3840x2160.jpg");
+    background:url("img/beautiful_beach_waves-wallpaper-3840x2160.jpg.jpeg");
     background-size: cover;
 }
 
