--- a/meal.css
+++ b/meal.css
@@ -17,6 +17,8 @@ body{
 }
 
 
+  
+
 
 
 
@@ -30,7 +32,7 @@ body{
 
 /* header navbar */
 #nav {
-    background-color: #e9ffff; 
+    background-color: #ff4c6796; 
 }
 
 /* header search bar section */
@@ -46,7 +48,7 @@ body{
 
 /* meal card */
 #card {
-    background-color: #e9ffff;
+    background-color: #ff4c6796;
     padding: 10px;
     color: white;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
@@ -83,7 +85,7 @@ body{
     align-items: left;
     justify-content: center;
     
-    color: #733c3c;
+    color: #ff4c6796;
     font-family: custom;
      font-weight: bold;
 }
@@ -96,5 +98,5 @@ body{
 
 /* favourites offcanvus */
 #favourites-body{
-    background-color:#badae5 ;
+    background-color:#ff4c6796 ;
 }
